7 June 2018: Wouter
	- Fix that update_connection_zones does not use item after free.
	- Fix declare before code warnings.
	- Use pclose for popen fds.
	- Use snprintf instead of sprintf to fixed buffer.
	- Fix gcc buffer size for snprintf warning (in dnssec-trigger update
	  code, not the patch set from 14may).

23 May 2018: Wouter
	- string_list, sprint with null termination and correct buffer check.

18 May 2018: Wouter
	- More review fixes, store.c, error log and fixup of getline return,
	  and not variable use before declaration.  Spelling, strdup,
	  bool removal for portability.  Removed unsigned comparison warning.

14 May 2018: Wouter
	- Patch set from Martin Sehnoutka,
	  It migrates the functionality currently provided by the script
	  into the daemon. the "update" command from the script is available
	  in the daemon as "update_all", so that they can live side by side.
	- Modify the build system:
A new configure option 'with-forward-zones-support' was introduced, that
enables configuration of forward and local zones directly from the
daemon as opposed to the script. Without this option, there is almost no
change.

The new functionality of the daemon can be triggered by the "update_all"
command, which is now used in NM dispatcher script and systemd service
file. Some configuration options were migrated from the script to the
daemon as well.

Finally a testing suite was introduced using the cmocka library.
	- Introduce string_buffer and string_list types:
	String buffer is a fat pointer and list is a single linked list of fat
char pointers.
	- Import JSON parsing library (BSD-MIT license).
	- Connection list module:
A connection is a struct encapsulating the concept of "connection" as
known from NetworkManager. It is used to extract information about
global resolvers, DNS search zones and in the future about reverse zones
corresponding to the network address.
	- Function to parse JSON into connection list