@@ -1,3 +1,7 @@
+14 June 2018: Wouter
+	- Add check on shell commandline arguments, to make sure domain names
+	  and IP addresses passed to it do not contain escape characters.
+
 7 June 2018: Wouter
 	- Fix that update_connection_zones does not use item after free.
 	- Fix declare before code warnings.
